--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formdata": "^0.10.4",
     "multer": "^1.4.4",
     "node-fetch": "^3.2.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xml2json": "^0.12.0"
   }
 }
